--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=8306b373-137c-462d-abe5-7601474f062b" type="text/javascript"></script>
+    <!-- <script defer type="text/javascript" src="https://code.highcharts.com/stock/highstock.js"></script> -->
    <title>Meshtastic MAP</title>
   </head>
   <body>
